Implemented share, image picker, mail composer, safari

--- a/System View Controllers/Info.plist
+++ b/System View Controllers/Info.plist
@@ -4,6 +4,10 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Please allow to use camera to save your photo</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Please allow to use photo library to save your photos</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
